--- a/res/layout/activity_add_reminder.xml
+++ b/res/layout/activity_add_reminder.xml
@@ -29,7 +29,7 @@
         android:text="@string/medication_name" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/textMedicationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView1"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/editText1"
+        android:layout_alignLeft="@+id/textMedicationName"
         android:ems="10"
         android:inputType="text|number" />
 
@@ -90,10 +90,10 @@
         android:id="@+id/startTimePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignLeft="@+id/startDatePicker"
-        android:paddingTop="20dp"
-        android:layout_alignTop="@+id/textView4" />
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/textView4"
+        android:paddingTop="20dp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -147,7 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView7"
         android:layout_alignLeft="@+id/endTimePicker"
-        android:paddingTop="20dp"
+        android:paddingTop="40dp"
         android:entries="@array/medication_frequency_num"
         android:prompt="@string/medication_frequency_num_prompt" />
     
@@ -157,8 +157,31 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView7"
         android:layout_toRightOf="@+id/spinnerRepeatNum"
-        android:paddingTop="20dp"
+        android:paddingTop="40dp"
         android:entries="@array/medication_frequency_unit"
         android:prompt="@string/medication_frequency_unit_prompt" />
+	
+	<Button 
+	  	android:id="@+id/buttonSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinnerRepeatUnit"
+        
+        android:layout_alignLeft="@+id/endTimePicker"
+        android:paddingTop="40dp"
+        android:text="@string/save"
+        android:onClick="saveReminder" />
+        
+	
+	<Button 
+	  	android:id="@+id/buttonCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/buttonSave"
+        android:layout_toRightOf="@+id/buttonSave"
+        android:paddingTop="40dp"
+        android:text="@string/cancel"
+        android:onClick="refreshScreen" />
+        
 </RelativeLayout>
 </ScrollView>
