--- a/res/layout/activity_view_calendar.xml
+++ b/res/layout/activity_view_calendar.xml
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Copyright(c) 2012 Anitha Suryanarayan 
 
 This program is free software: you can redistribute it and/or modify
@@ -18,18 +18,18 @@ Author: Anitha Suryanarayan
 feedback: anitha@pdx.edu
 -->
 
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/reminderList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/padding_medium"
-        android:text="@string/hello_world"
-        tools:context=".ViewCalendarActivity" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+    </ListView>
 
 </RelativeLayout>
