dynamically create expandable list for medical supplies, complete settings menu

--- a/res/layout/activity_digi_assist_settings.xml
+++ b/res/layout/activity_digi_assist_settings.xml
@@ -17,18 +17,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 Author: Anitha Suryanarayan
 feedback: anitha@pdx.edu
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/padding_medium"
-        android:text="@string/hello_world"
-        tools:context=".DigiAssistSettingsActivity" />
-
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+        >
+    <ExpandableListView android:id="@+id/expandable_list"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:transcriptMode="alwaysScroll"
+                        android:cacheColorHint="#00000000"
+                        android:listSelector="@android:color/transparent"/>
+</LinearLayout>
